Converting room selection checkboxes to radio buttons

--- a/app/scripts/templates/calendarSelectionModal.hbs
+++ b/app/scripts/templates/calendarSelectionModal.hbs
@@ -7,10 +7,9 @@
   <div class="checkbox-group">
     {{#each cals}}
     <label{{#unless this.isSelected}} class="inactive"{{/unless}}>
-      <div class="draggable-handle" style="border-left: 5px solid
-        {{this.color}};">..<br>..</div>
+      <div class="draggable-handle" style="border-left: 5px solid {{this.color}};">..<br>..</div>
       {{this.name}}
-      <input type="checkbox" {{#if this.isSelected}}checked{{/if}} data-resourceid="{{this.resourceId}}" />
+      <input type="radio" name="calendarId" {{#if this.isSelected}}checked{{/if}} value="{{this.resourceId}}" />
     </label>
     {{/each}}
   </div>
