--- a/app/styles/rooms/common.styl
+++ b/app/styles/rooms/common.styl
@@ -8,6 +8,9 @@ body
   font-weight 100
   color #fff
 
+a
+  color #fff
+
 h1
   font-weight 500
   text-transform uppercase
@@ -52,16 +55,20 @@ img
   height 100%
 
 #OcupadoApp
-  display -webkit-box
-  display -webkit-flex
-  display flex
-  height 100%
-  -webkit-box-pack justify
-  align-items stretch
-  overflow hidden
   *
     box-sizing border-box
 
+  .rooms-container
+    display -webkit-box
+    display -webkit-flex
+    display flex
+    height 100%
+    -webkit-box-pack justify
+    align-items stretch
+    overflow hidden
+    position absolute
+    width 100%
+    height 100%
 
   section
     width 0
