--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -1,6 +1,7 @@
 @import 'includes/mixins'
 @import 'includes/modal'
 @import 'includes/icons'
+@import 'includes/buttons'
 @import 'includes/chrome'
 
 @import 'rooms/common'
