--- a/app/scripts/templates/chrome.hbs
+++ b/app/scripts/templates/chrome.hbs
@@ -1,4 +1,4 @@
-<button id="calendarSelectionBtn">Back</a>
+<button id="calendarSelectionBtn">Back</button>
 
 <a href="#" id="calendarMenuBtn">...</a>
 
