Adding booking, moving chrome to core

--- a/app/styles/rooms/common.styl
+++ b/app/styles/rooms/common.styl
@@ -59,6 +59,12 @@ img
     box-sizing border-box
 
   .rooms-container
+    position absolute
+    width 100%
+    height 100%
+    overflow hidden
+
+  .room-container
     display -webkit-box
     display -webkit-flex
     display flex
