--- a/app/scripts/templates/_vacant.hbs
+++ b/app/scripts/templates/_vacant.hbs
@@ -3,6 +3,6 @@
 <h1>{{name}}</h1>
 <div class="polar-clock-container">
   <div class="polar-clock" id="canvas{{name}}"></div>
-  <div class="room-status-text">vacantó</div>
+  <div class="room-status-text" data-default="vacantó">vacantó</div>
 </div>
 
