--- a/app/styles/includes/buttons.styl
+++ b/app/styles/includes/buttons.styl
@@ -1,1 +1,25 @@
+.back
+  border 1px solid #fff
+  border-radius 3px
+  background transparent
+  position absolute
+  color #fff
 
+.book-now-btn
+  position absolute
+  width 50px;
+  height 50px
+  left 50%
+  margin-left -25px
+  top 50%
+  margin-top -15px
+  border 5px solid #fff
+  border-radius 50%
+
+  &:before
+    content: '+'
+    position absolute
+    display block
+    margin-left 0
+    margin-top -40px
+    font-size 100px
