Clean up styling on calendar selection page

--- a/app/scripts/templates/calendarItem.hbs
+++ b/app/scripts/templates/calendarItem.hbs
@@ -1,2 +1,1 @@
-<a href="#" data-id="{{this.resourceId}}" style="border-left: 10px solid {{this.color}}">{{this.name}}</a>
-
+<div class="calendar-list__bullet" style="border-color: {{this.color}};"></div>{{this.name}}
