--- a/app/scripts/templates/calendarList.hbs
+++ b/app/scripts/templates/calendarList.hbs
@@ -1,3 +1,6 @@
-<h1>Select a room to display</h1>
-<ul>
+<header class="block-header">
+  <span class="block-header__content">Select a room to display:</span>
+</header>
+
+<ul class="calendar-list">
 </ul>
