--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -3,6 +3,7 @@
 @import 'includes/icons'
 @import 'includes/buttons'
 @import 'includes/chrome'
+@import 'includes/calendar_list'
 
 @import 'rooms/common'
 @import 'rooms/occupied'
