--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -33,8 +33,13 @@
 .upcoming-events li .event-attendees{max-height:0;overflow:hidden}
 .upcoming-events li:last-child{border-bottom:none}
 .upcoming-events li.open .event-attendees{max-height:none}
-body{background:#000;position:absolute;height:100%;width:100%;margin:0;font-family:'Raleway';font-weight:100;color:#fff}
-a{color:#fff}
+.block-header{background:#fff;color:#818c98;height:200px;}
+.block-header .block-header__content{width:500px;display:block;margin:0 auto;padding:110px 0 0 0;font-size:24px;font-weight:400}
+.calendar-list{width:500px;margin:0 auto;list-style-type:none;padding:0;}
+.calendar-list li{margin:0;padding:0;height:100px;line-height:100px;border-bottom:1px solid #d7dadd;text-transform:uppercase;font-size:24px;font-weight:300}
+.calendar-list .calendar-list__bullet{float:left;width:25px;height:25px;border-radius:50%;border:3px solid;margin-top:36px;margin-right:10px}
+body{background:#ececec;position:absolute;height:100%;width:100%;margin:0;font-family:'Raleway';font-weight:100;color:#57616c}
+a{color:#57616c}
 h1{font-weight:500;text-transform:uppercase;font-size:68px;text-align:center;margin-top:24px}
 img{width:110px;height:110px;border-radius:50%;position:absolute;z-index:10;left:50%;margin-left:-55px;margin-top:-45px}
 .time-remaining{font-size:51px;text-align:center;margin-top:-3px}
