--- a/app/styles/rooms/common.styl
+++ b/app/styles/rooms/common.styl
@@ -1,15 +1,15 @@
 body
-  background #000
+  background #ececec
   position absolute
   height 100%
   width 100%
   margin 0
   font-family 'Raleway'
   font-weight 100
-  color #fff
+  color #57616c
 
 a
-  color #fff
+  color #57616c
 
 h1
   font-weight 500
