Starting on vacant styling, removed back button

--- a/app/scripts/templates/_vacant.hbs
+++ b/app/scripts/templates/_vacant.hbs
@@ -1,6 +1,6 @@
 <div class="icon-clock">&#128340;</div>
 <div class="time-remaining">{{timeRemaining}}</div>
-<h1>{{name}}</h1>
+<h1 class="room-name">{{name}}</h1>
 <div class="polar-clock-container">
   <div class="polar-clock" id="canvas{{name}}"></div>
   <div class="room-status-text" data-default="vacantó">vacantó</div>
