--- a/app/scripts/templates/_occupied.hbs
+++ b/app/scripts/templates/_occupied.hbs
@@ -2,7 +2,7 @@
 
 <div class="time-remaining">{{timeRemaining}}</div>
 
-<h1>{{name}}</h1>
+<h1 class="room-name">{{name}}</h1>
 
 <div class="creator-name">{{event.creatorName}}</div>
 
