--- a/app/styles/includes/buttons.styl
+++ b/app/styles/includes/buttons.styl
@@ -14,13 +14,14 @@
   margin-left -25px
   top 50%
   margin-top -15px
-  border 5px solid #fff
+  border 1px solid #57616c
   border-radius 50%
 
   &:before
     content: '+'
-    position absolute
+    font-family 'bebas'
     display block
-    margin-left 0
-    margin-top -40px
-    font-size 100px
+    font-size 60px
+    width 100%
+    text-align center
+    line-height 46px
