--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -18,9 +18,10 @@
 .icon-clock{font-family:entypo;font-size:42px;text-align:center;margin-top:37px}
 .icon-person{font-family:entypo;font-size:30px}
 .icon-arrow-right{font-family:entypo;font-size:30px;display:inline-block;color:#585858;transform:scale(2,1);-webkit-transform:scale(1,2)}
+@font-face{font-family:'bebas';src:url("../fonts/BebasNeue-webfont.eot");src:url("../fonts/BebasNeue-webfont.eot?#iefix") format('embedded-opentype'),url("../fonts/BebasNeue-webfont.woff") format('woff'),url("../fonts/BebasNeue-webfont.ttf") format('truetype'),url("../fonts/BebasNeue-webfont.svg#bebas_neueregular") format('svg');font-weight:normal;font-style:normal}
 .back{margin-top:50px;border:1px solid #fff;border-radius:3px;background:transparent;position:absolute;color:#fff}
-.book-now-btn{position:absolute;width:50px;height:50px;left:50%;margin-left:-25px;top:50%;margin-top:-15px;border:5px solid #fff;border-radius:50%;}
-.book-now-btn:before{content:'+';position:absolute;display:block;margin-left:0;margin-top:-40px;font-size:100px}
+.book-now-btn{position:absolute;width:50px;height:50px;left:50%;margin-left:-25px;top:50%;margin-top:-15px;border:1px solid #57616c;border-radius:50%;}
+.book-now-btn:before{content:'+';font-family:'bebas';display:block;font-size:60px;width:100%;text-align:center;line-height:46px}
 .events-list{position:absolute;height:80%;width:40%;right:-40%;background:#efefef;top:10%;border-radius:5px 0 0 5px;box-sizing:border-box;padding:10px;color:#000;z-index:20;}
 .events-list .events-list-content{background:#fff;height:100%;width:100%;border:1px solid #ddd}
 .events-list .events-list-handle{width:30px;height:100%;position:absolute;left:-30px;top:0;margin-top:-25px;}
@@ -44,22 +45,17 @@ h1{font-weight:500;text-transform:uppercase;font-size:68px;text-align:center;mar
 img{width:110px;height:110px;border-radius:50%;position:absolute;z-index:10;left:50%;margin-left:-55px;margin-top:-45px}
 .time-remaining{font-size:51px;text-align:center;margin-top:-3px}
 .polar-clock-container{position:absolute;width:100%;height:50%;bottom:0;padding:0 50px 40px 50px;box-sizing:border-box}
-.room-status-text{position:absolute;left:0;margin-bottom:0;font-size:43px;text-align:center;width:100%;text-shadow:0 -2px rgba(0,0,0,0.3)}
+.room-status-text{position:absolute;left:0;margin-bottom:0;font-size:43px;text-align:center;width:100%}
 .polar-clock{width:100%;height:100%}
 #OcupadoApp *{box-sizing:border-box}
-#OcupadoApp .rooms-container{position:absolute;width:100%;height:100%;overflow:hidden}
+#OcupadoApp .rooms-container{position:absolute;width:100%;height:100%;overflow:hidden;color:#0a3d33}
 #OcupadoApp .room-container{display:-webkit-box;display:-webkit-flex;display:flex;height:100%;-webkit-box-pack:justify;align-items:stretch;overflow:hidden;position:absolute;width:100%;height:100%}
 #OcupadoApp section{width:0;box-flex:1;-webkit-box-flex:1;-webkit-flex:1;flex:1;position:relative;border-left:1px solid #000;}
 #OcupadoApp section:first-child{border-left:none}
-#OcupadoApp section.small h1{font-size:48px;margin-top:10px;margin-bottom:20px}
-#OcupadoApp section.small .room-status-text{font-size:30px}
-#OcupadoApp section.small img.creator-image{width:70px;height:70px;margin-left:-35px;margin-top:-25px}
-#OcupadoApp section.small .time-remaining{font-size:31px}
-#OcupadoApp section.small .icon-clock{margin-top:10px}
 .occupied{background:#d86248;background:-webkit-gradient(linear,left top,left bottom,color-stop(28%,#d86248),color-stop(60%,#d44543));background:linear-gradient(to bottom,#d86248 28%,#d44543 60%);}
 .occupied .creator-name{font-size:18px;text-align:center;font-weight:400}
 .upcoming{background:#3e3e3e;background:-webkit-gradient(linear,left top,left bottom,color-stop(28%,#3e3e3e),color-stop(60%,#343434));background:linear-gradient(to bottom,#3e3e3e 28%,#343434 60%);}
 .upcoming .up-next{text-align:center;font-size:18px}
-.vacant{background:#b5b44b;background:-webkit-gradient(linear,left top,left bottom,color-stop(28%,#b5b44b),color-stop(60%,#92b142));background:linear-gradient(to bottom,#b5b44b 28%,#92b142 60%);}
+.vacant{background:#9ee7bd;background:-webkit-gradient(linear,left top,left bottom,color-stop(28%,#9ee7bd),color-stop(60%,#9ee7d8));background:linear-gradient(to bottom,#9ee7bd 28%,#9ee7d8 60%);}
 #authorizeButton{background:#3d3d3d;color:#d5b430;border:none;border-radius:5px;padding:10px 20px;position:absolute;top:50%;margin-top:-35px;left:50%;margin-left:-105px;font-size:42px;font-family:'Raleway';font-weight:100}
 .clickThrough{pointer-events:none}
