--- a/app/styles/rooms/common.styl
+++ b/app/styles/rooms/common.styl
@@ -48,7 +48,6 @@ img
   font-size 43px
   text-align center
   width 100%
-  text-shadow 0 -2px rgba(0,0,0,0.3)
 
 .polar-clock
   width 100%
@@ -63,6 +62,7 @@ img
     width 100%
     height 100%
     overflow hidden
+    color #0a3d33
 
   .room-container
     display -webkit-box
@@ -87,21 +87,3 @@ img
 
     &:first-child
       border-left none
-
-    &.small
-      h1
-        font-size 48px
-        margin-top 10px
-        margin-bottom 20px
-      .room-status-text
-        font-size 30px
-      img.creator-image
-        width 70px
-        height 70px
-        margin-left -35px
-        margin-top -25px
-      .time-remaining
-        font-size 31px
-      .icon-clock
-        margin-top 10px
-
