Refactor arc view, add some styling

--- a/app/styles/rooms/common.styl
+++ b/app/styles/rooms/common.styl
@@ -44,10 +44,10 @@ img
 .room-status-text
   position absolute
   left 0
-  margin-bottom 0
   font-size 43px
   text-align center
   width 100%
+  bottom 250px
 
 .polar-clock
   width 100%
