--- a/app/styles/rooms/occupied.styl
+++ b/app/styles/rooms/occupied.styl
@@ -1,7 +1,11 @@
 .occupied
-  gradient(#d86248, #d44543)
+  gradient(#ffba00, #f46030)
+  color #0a6060
 
   .creator-name
     font-size 18px
     text-align center
     font-weight 400
+
+  .room-status-text
+    color #fff
