--- a/app/styles/rooms/upcoming.styl
+++ b/app/styles/rooms/upcoming.styl
@@ -1,6 +1,10 @@
 .upcoming
-  gradient(#3e3e3e, #343434)
+  gradient(#286f6f, #1b4c4b)
+  color #fca700
 
   .up-next
     text-align center
     font-size 18px
+
+  .room-status-text
+    color #96bf48
