--- a/app/styles/includes/chrome.styl
+++ b/app/styles/includes/chrome.styl
@@ -3,19 +3,17 @@
   height 80%
   width 40%
   right -40%
-  background #efefef
   top 10%
+  border 3px solid #0d7f7f
   border-radius 5px 0 0 5px
   box-sizing border-box
-  padding 10px
+  padding 4px
   color #000
   z-index 20
 
   .events-list-content
-    background #fff
     height 100%
     width 100%
-    border 1px solid #ddd
 
   .events-list-handle
     width 30px
@@ -26,9 +24,9 @@
     margin-top -25px
 
     &:before
-      content ''
-      background #efefef
-      border-radius 5px 0 0 5px
+      content ''
+      font-family entypo
+      color #0d7f7f
       display block
       height 50px
       width 30px
@@ -36,6 +34,10 @@
       left 0
       top 50%
       margin-top -25px
+      transform scale(2,1)
+      -webkit-transform scale(1,2)
+      line-height 50px
+      font-size 40px
 
 .upcoming-events
   margin 0
