General fixes and improvements

--- a/app/styles/includes/buttons.styl
+++ b/app/styles/includes/buttons.styl
@@ -13,15 +13,17 @@
   left 50%
   margin-left -25px
   top 50%
-  margin-top -15px
+  margin-top -25px
   border 1px solid #57616c
   border-radius 50%
+  background #0d7f7f
 
   &:before
-    content: '+'
-    font-family 'bebas'
+    content ''
     display block
-    font-size 60px
     width 100%
-    text-align center
-    line-height 46px
+    height 100%
+    background-image url('../images/icon-plus.svg')
+    background-size 15px
+    background-position center center
+    background-repeat no-repeat
