--- a/app/styles/rooms/upcoming.styl
+++ b/app/styles/rooms/upcoming.styl
@@ -1,10 +1,8 @@
 .upcoming
   gradient(#286f6f, #1b4c4b)
-  color #fca700
+  color #ffffff
 
   .up-next
     text-align center
     font-size 18px
 
-  .room-status-text
-    color #96bf48
