--- a/app/styles/includes/chrome.styl
+++ b/app/styles/includes/chrome.styl
@@ -26,7 +26,7 @@
     &:before
       content ''
       font-family entypo
-      color #0d7f7f
+      color #ffffff
       display block
       height 50px
       width 30px
