--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,10 +22,11 @@
 .back{margin-top:50px;border:1px solid #fff;border-radius:3px;background:transparent;position:absolute;color:#fff}
 .book-now-btn{position:absolute;width:50px;height:50px;left:50%;margin-left:-25px;top:50%;margin-top:-25px;border:1px solid #57616c;border-radius:50%;background:#0d7f7f;}
 .book-now-btn:before{content:'';display:block;width:100%;height:100%;background-image:url("../images/icon-plus.svg");background-size:15px;background-position:center center;background-repeat:no-repeat}
-.events-list{position:absolute;height:80%;width:40%;right:-40%;top:10%;border:3px solid #0d7f7f;border-radius:5px 0 0 5px;box-sizing:border-box;padding:4px;color:#000;z-index:20;}
-.events-list .events-list-content{height:100%;width:100%}
-.events-list .events-list-handle{width:30px;height:100%;position:absolute;left:-30px;top:0;margin-top:-25px;}
-.events-list .events-list-handle:before{content:'';font-family:entypo;color:#fff;display:block;height:50px;width:30px;position:absolute;left:0;top:50%;margin-top:-25px;transform:scale(2,1);-webkit-transform:scale(1,2);line-height:50px;font-size:40px}
+.events-list{position:absolute;height:80%;width:40%;right:-40%;top:10%;border:3px solid #0d7f7f;border-radius:5px 0 0 5px;box-sizing:border-box;padding:4px;color:#000;z-index:20}
+.events-list-content{height:100%;width:100%}
+.events-list-handle{width:30px;height:100%;position:absolute;left:-30px;top:0;margin-top:-25px;}
+.events-list-handle:before{content:'';font-family:entypo;color:#fff;display:block;height:50px;width:30px;position:absolute;left:0;top:50%;margin-top:-25px;transform:scale(2,1);-webkit-transform:scale(1,2);line-height:50px;font-size:40px;transition:all .3s ease}
+.events-list-handle.is-open:before{transform:scale(2,1) rotate(180deg) translateX(10px);-webkit-transform:scale(1,2) rotate(180deg) translateX(10px)}
 .upcoming-events{margin:0;padding:0;width:100%;height:100%;overflow:auto;overflow-y:scroll;-webkit-overflow-scrolling:touch;}
 .upcoming-events li{display:block;margin:0;background:#f3f3f3;padding:10px 10px 10px 70px;border-bottom:1px solid #ddd;position:relative;}
 .upcoming-events li img{border-radius:0;width:58px;height:58px;left:0;top:0;margin:0}
