Adding sign out button, fix load order issue

--- a/app/styles/includes/calendar_list.styl
+++ b/app/styles/includes/calendar_list.styl
@@ -35,3 +35,14 @@
     border 3px solid
     margin-top 36px
     margin-right 10px
+
+.sign-out
+  position absolute
+  bottom 0
+  right 0
+  background transparent
+  border none
+  padding 10px
+  color #818c98
+  font-family Raleway
+  font-weight 300
