--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -40,7 +40,7 @@
 .calendar-list{width:500px;margin:0 auto;list-style-type:none;padding:0;}
 .calendar-list li{margin:0;padding:0;height:100px;line-height:100px;border-bottom:1px solid #d7dadd;text-transform:uppercase;font-size:24px;font-weight:300}
 .calendar-list .calendar-list__bullet{float:left;width:25px;height:25px;border-radius:50%;border:3px solid;margin-top:36px;margin-right:10px}
-.sign-out{position:absolute;bottom:0;right:0;background:transparent;border:none;padding:10px;color:#818c98;font-family:Raleway;font-weight:300}
+.sign-out{position:fixed;bottom:0;right:0;background:transparent;border:none;padding:10px;color:#818c98;font-family:Raleway;font-weight:300}
 body{background:#ececec;position:absolute;height:100%;width:100%;margin:0;font-family:'Raleway';font-weight:100;color:#57616c}
 a{color:#57616c}
 h1{font-weight:500;text-transform:uppercase;font-size:68px;text-align:center;margin-top:24px}
